improve generic error handling
