# BankApi.Core/Defaults/Builder.ErrorHandling.cs
@@ -1,10 +1,25 @@
+using System.Data.Common;
+using Microsoft.AspNetCore.Diagnostics;
+
 public static partial class ApiBuilder
 {
     public static IApplicationBuilder UseErrorHandling(this IApplicationBuilder app)
     {
-        app.UseExceptionHandler(exceptionHandlerApp
-            => exceptionHandlerApp.Run(async context
-                => await Results.Problem().ExecuteAsync(context)));
+        app.UseExceptionHandler(exceptionHandlerApp => exceptionHandlerApp.Run(async context =>
+        {
+            var exceptionFeature = context.Features.Get<IExceptionHandlerFeature>();
+            switch (exceptionFeature?.Error)
+            {
+                case DbException:
+                    await Results.UnprocessableEntity().ExecuteAsync(context);
+                    return;
+                case BadHttpRequestException:
+                    await Results.BadRequest().ExecuteAsync(context);
+                    return;
+            }
+
+            await Results.Problem().ExecuteAsync(context);
+        }));
 
         return app;
     }
